fixed styling issue where background image and footer did not extend to bottom of screen at different view port sizes

--- a/client/src/components/PortfolioFooter/style.css
+++ b/client/src/components/PortfolioFooter/style.css
@@ -6,4 +6,9 @@ footer {
   border-top: solid 5px teal;
   padding-top: 40px;
   padding-bottom: 40px;
+  position: absolute;
+  
+  width: 100%;
 }
+
+
