--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,22 +55,25 @@ p {
   font-family: 'Roboto', sans-serif;
 }
 
-#root {
-  background-image: url(./images/portfolioBackground.jpeg);
+html, body {
+  background-image: url(./images/erika-lowe-UB1hcYVw07E-unsplash.jpg);
   padding-top: 2em;
-  padding-bottom: 32px;
+  padding-bottom: 60px;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+
+  background-repeat: no-repeat;
+  min-height: 100%;
+
+}
+.aboutMeContainer {
+  margin-bottom: 12em;
 }
 
-footer {
-  background-color: grey;
-  text-align: center;
-  font-size: 1.25rem;
-  color: honeydew;
-  border-top: solid 5px teal;
-  padding-top: 40px;
-  padding-bottom: 40px;
+.contactContainer {
+  margin-bottom: 10em;
 }
-
 @media (max-width: 991.98px) {
   .container {
       margin: .75em;
