--- a/client/src/components/PortfolioNavbar/style.css
+++ b/client/src/components/PortfolioNavbar/style.css
@@ -5,6 +5,8 @@ nav .container-lg {
 .navbar {
   padding-top: 0px;
   padding-bottom: 0px;
+  margin-top: -64px;
+  margin-bottom: 10px;
 }
 .navbar-light .navbar-brand {
   background-color:teal;
