--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -5,3 +5,34 @@
   margin-bottom: 30px;
 }
 
+.fade-in {
+  animation: fadeIn ease 300ms;
+  -webkit-animation: fadeIn ease 300ms;
+  -moz-animation: fadeIn ease 300ms;
+  -o-animation: fadeIn ease 300ms;
+  -ms-animation: fadeIn ease 300ms;
+  }
+  @keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+  
+  @-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+  
+  @-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+  
+  @-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+  
+  @-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
